--- a/index.html
+++ b/index.html
@@ -42,7 +42,41 @@
                 <button class="watch">Watch Video <i class="fa-solid fa-play"></i></button>
             </div>
             <div class="right-side">
-                <img src="images/Group 9.png" alt="">
+                <div class="image-container">
+                    <img src="images/1694338520551.png" alt="food hero">
+                    <div class="product food-one">
+                        <div class="food-image">
+                            <img src="images/1694338520510.png" alt="food">
+                        </div>
+                        <div class="food-detals">
+                            <h5 class="food-title">Vegetiran slsad</h5>
+                            <div class="food-riate">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i> <!-- outline -->
+                            </div>
+                            <h5 class="food-price"><span>$</span>200</h5>
+                        </div>
+                    </div>
+                    <div class="product food-two">
+                        <div class="food-image">
+                            <img src="images/1694341954943.png" alt="food">
+                        </div>
+                        <div class="food-detals">
+                            <h5 class="food-title"> Spicy noodles</h5>
+                            <div class="food-riate">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star"></i> <!-- outline -->
+                            </div>
+                            <h5 class="food-price"><span>$</span>200</h5>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
